--- a/Ejercicios/agencia viajes/agenciaViajes.html
+++ b/Ejercicios/agencia viajes/agenciaViajes.html
@@ -17,14 +17,14 @@
         <div class="menu">
 
             <div class="logo">
-                <img src="img/logo.jpeg" alt="logo" height="150S" width="150">
+                <img src="img/logo.jpeg" alt="logo" height="150" width="150">
                 <h3>Explora el espacio con nosotros</h3>
 
             </div>
 
             <ul>
 
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#inicio">Inicio</a></li>
 
                 <li><a href="#">Destinos</a></li>
 
