--- a/Practica/Ecommerce/index.html
+++ b/Practica/Ecommerce/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<title>Campus Muebles</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 		<h1>Tienda <span>muebles </span></h1>
 	</header>
 
-	<nav>
+	<nav class="navegacion">
 		<a href="index.html">Inicio</a>
 		<a href="#">Nosotros</a>
 		<a href="#">Tienda</a>
