--- a/Ejercicios/Net/chart.html
+++ b/Ejercicios/Net/chart.html
@@ -14,13 +14,18 @@
 <body>
     <header class="container-head">
         <nav class="container-head__nav">
-            <a href="#" class="nav__logo">.Net</a>
+            <a href="#" class="nav__logo">Campus Code</a>
             <button class="nav__btn-menu">
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="index.html" class="nav__link">Inicio</a>
+                    <a href="index.html" class="nav__link">
+                        <i class="fa-solid fa-house"></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="net.html" class="nav__link">.Net</a>
                 </li>
                 <li class="nav__item">
                     <a href="chart.html" class="nav__link">C#</a>
